--- a/ProsysBack/appsettings.json
+++ b/ProsysBack/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-FU6L3JL;Database=Prosys;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=SIRINNOTEBOOKUM;Database=Prosys;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
